@@ -3,6 +3,9 @@
 	* src/message-manager.cc: Disconnects menuitem signal properly.
 	Fixed bug #901723.
 	
+	* src/mainmenu_callbacks.c: Do not reload new files. Fixed
+	bug #900897.
+	
 2004-02-20  Naba Kumar  <naba@gnome.org>
 
 	* src/message-manager-private.[c,h]: Implemented keypress
